--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-//    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    testImplementation "com.google.truth:truth:1.0.1"
 }
