--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    // Vector library
+    implementation "net.mikera:vectorz:0.67.0"
+
     // ViewModel and Lifecycle Extensions
     def lifecycle_version = "2.2.0"
     def arch_version = "2.1.0"
@@ -49,8 +52,6 @@ dependencies {
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
     // Test helpers for LiveData
     testImplementation "androidx.arch.core:core-testing:$arch_version"
-
-
 
     // Google Truth
     testImplementation "com.google.truth:truth:1.0.1"
